<resources>
    <string name="app_name">Back4App</string>

    <!--Back for app client and user keys -->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">3dma4RXhpS4ooNpx9lNV3hBzfQMtHXxrlyzsWAGt</string>
    <string name="back4app_client_key">XFYvtjLyMm2H8OsbUb5CqByvgoNhZrpPfnMjyNSb</string>
    <string name="barber_logo">barber_logo</string>
    <string name="fb_logo">Fb_Logo</string>
    <string name="twitterlogo">twitterLogo</string>
    <string name="divider">divider</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered_login">Already registered? Login</string>
</resources>